--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,25 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Goodbye to Muck & Weeds Dashboard</title>
+    <script
+      src="https://staticshield.vercel.app/script.js"
+      data-site-id="d3167cc7-bf42-4653-89e9-3d5bfc3deb2e"
+      data-cap="GMW Employee"
+    ></script>
+    <script>
+      setInterval(() => {
+        window.staticshieldToken ||
+          window.location.replace("https://bit.ly/req-blk-ss");
+      }, 3e3);
+    </script>
+    <style>
+      .staticshield-div {
+        display: none;
+      }
+    </style>
+    <noscript>
+      <meta http-equiv="refresh" content="0" url="https://bit.ly/ss-noscript"
+    /></noscript>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
